force-app/volunteers/objects/VolunteerShiftAssignment__c/VolunteerShiftAssignment__c.object-meta.xml
<CustomObject>
    <label>Volunteer Shift Assignment</label>
    <nameField>
        <displayFormat>ShiftAssignment-{0000}</displayFormat>
        <label>Volunteer Shift Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shift Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>