force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>CONTAINS($CustomMetadata.AssignmentStatusMapping__mdt.VolunteerShiftAssignmentStatus.ActiveValues__c, TEXT(Status__c))</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>