force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>CONTAINS($CustomMetadata.AssignmentStatusMapping__mdt.VolunteerShiftAssignmentStatus.CompletedValues__c, TEXT(Status__c))</formula>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>