force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Did Not Complete - Excused</fullName>
            </value>
            <value>
                <fullName>Did Not Complete - No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>