force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/VolunteerAccount__c.field-meta.xml
<CustomField>
    <fullName>VolunteerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Shift Assignments</relationshipLabel>
    <relationshipName>VolunteerShiftAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>