force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/VolunteerActivity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivity__c</fullName>
    <formula>VolunteerShift__r.VolunteerActivity__r.Name</formula>
    <label>Volunteer Activity</label>
    <type>Text</type>
</CustomField>