force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/VolunteerContact__c.field-meta.xml
<CustomField>
    <fullName>VolunteerContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Shift Assignments</relationshipLabel>
    <relationshipName>VolunteerShiftAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>