force-app/volunteers/objects/VolunteerShiftAssignment__c/fields/VolunteerShift__c.field-meta.xml
<CustomField>
    <fullName>VolunteerShift__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Shift</label>
    <referenceTo>VolunteerShift__c</referenceTo>
    <relationshipLabel>Volunteer Shift Assignments</relationshipLabel>
    <relationshipName>VolunteerShiftAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>